# contacts-app-rs

./: .gitignore  Cargo.toml  Justfile  README.md
src/: app.rs  main.rs  model.rs
templates/: edit.html  index.html  layout.html  new.html  rows.html
